src/test/deca/codegen/invalid/no-objects/divide_by_zero.ass
; Main program
; Beginning of main function:
	LOAD #1, R0
; End of main function.
	HALT
